--- a/latex/content/cahier-des-charges.tex
+++ b/latex/content/cahier-des-charges.tex
@@ -5,7 +5,7 @@
 Création d'un logiciel mettant en place un système de vote électronique alternatif (p.ex.~basé sur la méthode Borda), en prenant en compte la cryptographie pour gérer la sécurité, la confidentialité et la non-répudiabilité du résultat.
 
 \subsection{Contexte}
-Actuellement la plupart des votes se font avec un système à la majorité (relative ou absolue), cependant d'autres systèmes existent pour essayer soit de minimiser les mécontents (méthode Borda, vote par approbation, ...), soit de maximiser les contents (Jugement majoritaire, méthode de Condorcet, ...).
+Actuellement la plupart des votes se font avec un système à la majorité (relative ou absolue), cependant d'autres systèmes existent pour essayer soit de minimiser le nombre de mécontents (méthode Borda, vote par approbation, ...), soit de maximiser les contents (Jugement majoritaire, méthode de Condorcet, ...).
 
 %TODO "De par" > "En conséquence de "
 %TODO ajouté "dans l'ensemble des votations de tous genres"
@@ -22,7 +22,7 @@ De par l'utilisation quasi exclusive du vote majoritaire dans l'ensemble des vot
       \item le votant n'a pas de moyen de prouver ce qu'il a voté (ce qui évite la corruption)
       \item chacun peut vérifier que son vote a bien été pris en compte.
     \end{itemize}
-  \item Implémenter une démo d'une ou plusieurs méthodes alternatives de votation, dont au moins une qui cherche à minimiser les mécontents. Cette démo a pour objectif de montrer que le système de vote implémenté, pourra de manière électronique satisfaire les propriétés ci-dessus.
+  \item Implémenter une démo d'une ou plusieurs méthodes alternatives de votation, dont au moins une qui cherche à minimiser le nombre de mécontents. Cette démo a pour objectif de montrer que le système de vote implémenté, pourra de manière électronique satisfaire les propriétés ci-dessus.
 \end{enumerate}
 
 \subsection{Livrables}
