--- a/latex/content/introduction.tex
+++ b/latex/content/introduction.tex
@@ -11,11 +11,8 @@
   Dans ce document nous nous focalisons sur le vote électronique à distance.
   Lorsque ce n'est pas précisé, nous parlons du vote électronique à distance et non pas du vote effectué dans un bureau de vote.
 
-  \paragraph{Comptage électronique}
-  \todo{}
-  
-  \paragraph{NIZK proof of knoledge}
-  \todo{}
+  \paragraph{NIZK proof of knowledge}
+  Une preuve de connaissance, permettant de prouver à un tiers que l'on connaît une valeur sans révéler quoi que ce soit de cette dernière.
 
   \paragraph{Élection ou votation}
   Une élection est une action par laquelle un groupe de personne (les électrices et électeurs) choisissent une (ou plusieurs) personne
@@ -24,10 +21,8 @@
   Une élection est donc simplement une votation dans laquelle les options possibles sont des personnes.
   Sauf mention contraire, dans ce document ce qui est dit pour l'un l'est également pour l'autre.
 
-  \paragraph{Vote utile}\aref{diff:comp:util:util}
-  \todo{}
   \paragraph{Quorum}
-  \todo{}
+  Le quorum est le taux de participation requis pour que la votation soit validée.
 
   \section{Notation}
   
